--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm run build"
-  publish = "public/"
-  functions = "functions/"
+    command = "npm run build && cd functions/crudApp && npm install"
+    publish = "public/"
+    functions='functions/'
