--- a/package.json
+++ b/package.json
@@ -17,16 +17,24 @@
   },
   "license": "0BSD",
   "dependencies": {
+    " ": "^2.1.10",
     "@apollo/client": "^3.3.6",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "faunadb": "^4.0.0",
+    "formik": "^2.2.6",
     "gatsby": "^2.26.1",
     "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-typescript": "^2.12.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sweetalert2": "^10.14.0",
+    "typescript": "^4.1.4",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "netlify-lambda": "^2.0.2"
